--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
+    "react": "16.9.0",
+    "react-dom": "16.13.0",
+    "react-redux": "7.1.0",
+    "react-router-dom": "5.0.1",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "react-swipeable-views": "0.13.9",
+    "redux": "4.0.4",
+    "redux-actions": "2.6.5",
+    "redux-logger": "3.0.6",
+    "redux-saga": "1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
